# PlayTurtle

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  playturtle.py  pyproject.toml
docs/: README.md  about.md
docs/assets/css/: style.scss
playturtle/: __init__.py  __main__.py  playturtle.py
